import { test, expect, describe } from "bun:test";
import { buildTradingCard, buildPaginationCard } from "../src/builders/flex-message.builder";
import type { HFMPerformanceData } from "../src/types/hfm.types";

const mockData: HFMPerformanceData = {
  client_id: 45219,
  account_id: 78451293,
  activity_status: "active",
  trades: 24,
  volume: 3.42,
  account_type: "Standard",
  balance: 12450.8,
  account_currency: "USD",
  equity: 12998.35,
  archived: false,
  subaffiliate: 0,
  account_regdate: "2024-01-15T00:00:00Z",
  status: "approved",
};

const matchAllConditions = {
  underTargetWallet: true,
  depositThresholdMet: true,
  matchAll: true,
};

const notMatchConditions = {
  underTargetWallet: false,
  depositThresholdMet: false,
  matchAll: false,
};

function extractTexts(card: object): string[] {
  const texts: string[] = [];
  function walk(node: unknown) {
    if (node == null || typeof node !== "object") return;
    const obj = node as Record<string, unknown>;
    if (obj.type === "text" && typeof obj.text === "string") {
      texts.push(obj.text);
    }
    for (const val of Object.values(obj)) {
      if (Array.isArray(val)) val.forEach(walk);
      else if (typeof val === "object" && val !== null) walk(val);
    }
  }
  walk(card);
  return texts;
}

function findBadgeByLabel(
  card: Record<string, unknown>,
  label: string
): Record<string, unknown> | undefined {
  const body = card.body as Record<string, unknown>;
  const contents = body.contents as Record<string, unknown>[];
  for (const row of contents) {
    const inner = (row as Record<string, unknown>).contents as
      | Record<string, unknown>[]
      | undefined;
    if (!inner) continue;
    const badge = inner.find(
      (t) => (t as Record<string, unknown>).text === label
    );
    if (badge) return badge as Record<string, unknown>;
  }
  return undefined;
}

describe("buildTradingCard", () => {
  test("all fields populated in output JSON", () => {
    const card = buildTradingCard(mockData, matchAllConditions, {
      showVolume: true,
    });
    const texts = extractTexts(card);

    expect(texts.some((t) => t.includes("45219"))).toBe(true);
    expect(texts.some((t) => t.includes("78451293"))).toBe(true);
    expect(texts.some((t) => t.includes("Active"))).toBe(true);
    expect(texts.some((t) => t.includes("24"))).toBe(true);
    expect(texts.some((t) => t.includes("3.42 lots"))).toBe(true);
    expect(texts.some((t) => t.includes("Standard"))).toBe(true);
    expect(texts.some((t) => t.includes("$12,450.80"))).toBe(true);
    expect(texts.some((t) => t.includes("$12,998.35"))).toBe(true);
    expect(texts.some((t) => t === "USD")).toBe(true);
    expect(texts.some((t) => t === "15 Jan 2024")).toBe(true);
    expect(texts.some((t) => t.includes("Approved"))).toBe(true);
    expect(texts.some((t) => t === "0")).toBe(true);
    expect(texts.some((t) => t.includes("Match All"))).toBe(true);
  });

  test("active status shows green badge", () => {
    const card = buildTradingCard(mockData, matchAllConditions) as Record<string, unknown>;
    const badge = findBadgeByLabel(card, "\u2713 Active");
    expect(badge).toBeDefined();
    expect(badge!.color).toBe("#1DB954");
  });

  test("inactive status shows grey badge", () => {
    const inactiveData = { ...mockData, activity_status: "inactive" };
    const card = buildTradingCard(inactiveData, matchAllConditions) as Record<string, unknown>;
    const badge = findBadgeByLabel(card, "inactive");
    expect(badge).toBeDefined();
    expect(badge!.color).toBe("#9E9E9E");
  });

  test("USD currency formatting", () => {
    const card = buildTradingCard(mockData, matchAllConditions);
    const texts = extractTexts(card);
    expect(texts.some((t) => t === "$12,450.80")).toBe(true);
    expect(texts.some((t) => t === "$12,998.35")).toBe(true);
  });

  test("volume formatting with lots suffix", () => {
    const card = buildTradingCard(mockData, matchAllConditions, {
      showVolume: true,
    });
    const texts = extractTexts(card);
    expect(texts.some((t) => t === "3.42 lots")).toBe(true);
  });

  test("volume metric hidden by default", () => {
    const card = buildTradingCard(mockData, matchAllConditions);
    const texts = extractTexts(card);
    expect(texts.some((t) => t === "Volume")).toBe(false);
    expect(texts.some((t) => t.includes("lots"))).toBe(false);
    expect(texts.some((t) => t === "Trades")).toBe(true);
    expect(texts.some((t) => t === "24")).toBe(true);
  });

  test("volume metric shown when showVolume option is set", () => {
    const card = buildTradingCard(mockData, matchAllConditions, {
      showVolume: true,
    });
    const texts = extractTexts(card);
    expect(texts.some((t) => t === "Volume")).toBe(true);
    expect(texts.some((t) => t === "3.42 lots")).toBe(true);
  });

  test("THB currency formatting", () => {
    const thbData: HFMPerformanceData = {
      ...mockData,
      balance: 450000,
      equity: 450500,
      account_currency: "THB",
    };
    const card = buildTradingCard(thbData, matchAllConditions);
    const texts = extractTexts(card);
    expect(texts.some((t) => t === "THB\u00A0450,000.00")).toBe(true);
    expect(texts.some((t) => t === "THB\u00A0450,500.00")).toBe(true);
    expect(texts.some((t) => t === "THB")).toBe(true);
  });

  test("USC currency shows raw value with USC label", () => {
    const uscData: HFMPerformanceData = {
      ...mockData,
      balance: 1245080,
      equity: 1299835,
      account_currency: "USC",
    };
    const card = buildTradingCard(uscData, matchAllConditions);
    const texts = extractTexts(card);
    expect(texts.some((t) => t === "1,245,080.00 USC")).toBe(true);
    expect(texts.some((t) => t === "1,299,835.00 USC")).toBe(true);
    expect(texts.some((t) => t === "USC")).toBe(true);
  });

  test("unknown currency falls back to USD", () => {
    const unknownData: HFMPerformanceData = {
      ...mockData,
      account_currency: "EUR",
    };
    const card = buildTradingCard(unknownData, matchAllConditions);
    const texts = extractTexts(card);
    expect(texts.some((t) => t === "$12,450.80")).toBe(true);
    expect(texts.some((t) => t === "EUR")).toBe(true);
  });

  test("bubble has size mega", () => {
    const card = buildTradingCard(mockData, matchAllConditions) as Record<string, unknown>;
    expect(card.size).toBe("mega");
  });

  test("bubble type is bubble", () => {
    const card = buildTradingCard(mockData, matchAllConditions) as Record<string, unknown>;
    expect(card.type).toBe("bubble");
  });

  test("match all shows green badge", () => {
    const card = buildTradingCard(mockData, matchAllConditions) as Record<string, unknown>;
    const badge = findBadgeByLabel(card, "\u2713 Match All");
    expect(badge).toBeDefined();
    expect(badge!.color).toBe("#1DB954");
  });

  test("not match shows red badge", () => {
    const card = buildTradingCard(mockData, notMatchConditions) as Record<string, unknown>;
    const badge = findBadgeByLabel(card, "\u2717 Not Match");
    expect(badge).toBeDefined();
    expect(badge!.color).toBe("#DC2626");
  });

  test("not match shows failing conditions detail", () => {
    const card = buildTradingCard(mockData, notMatchConditions);
    const texts = extractTexts(card);
    expect(texts.some((t) => t.includes("Wallet does not match target"))).toBe(true);
    expect(texts.some((t) => t.includes("Deposit below threshold"))).toBe(true);
  });

  test("only wallet condition fails shows only wallet message", () => {
    const walletOnlyFail = {
      underTargetWallet: false,
      depositThresholdMet: true,
      matchAll: false,
    };
    const card = buildTradingCard(mockData, walletOnlyFail);
    const texts = extractTexts(card);
    expect(texts.some((t) => t.includes("Wallet does not match target"))).toBe(true);
    expect(texts.some((t) => t.includes("Deposit below threshold"))).toBe(false);
  });

  test("only deposit condition fails shows only deposit message", () => {
    const depositOnlyFail = {
      underTargetWallet: true,
      depositThresholdMet: false,
      matchAll: false,
    };
    const card = buildTradingCard(mockData, depositOnlyFail);
    const texts = extractTexts(card);
    expect(texts.some((t) => t.includes("Wallet does not match target"))).toBe(false);
    expect(texts.some((t) => t.includes("Deposit below threshold"))).toBe(true);
  });

  test("match all does not show failing conditions", () => {
    const card = buildTradingCard(mockData, matchAllConditions);
    const texts = extractTexts(card);
    expect(texts.some((t) => t.includes("Wallet does not match target"))).toBe(false);
    expect(texts.some((t) => t.includes("Deposit below threshold"))).toBe(false);
  });

  test("account status approved shows green badge", () => {
    const card = buildTradingCard(mockData, matchAllConditions) as Record<string, unknown>;
    const badge = findBadgeByLabel(card, "\u2713 Approved");
    expect(badge).toBeDefined();
    expect(badge!.color).toBe("#1DB954");
  });

  test("account status non-approved shows grey badge", () => {
    const pendingData = { ...mockData, status: "pending" };
    const card = buildTradingCard(pendingData, matchAllConditions) as Record<string, unknown>;
    const badge = findBadgeByLabel(card, "pending");
    expect(badge).toBeDefined();
    expect(badge!.color).toBe("#9E9E9E");
  });

  test("subaffiliate displayed as raw number", () => {
    const subData = { ...mockData, subaffiliate: 12345 };
    const card = buildTradingCard(subData, matchAllConditions);
    const texts = extractTexts(card);
    expect(texts.some((t) => t === "12345")).toBe(true);
  });

  test("registration date formatted as DD MMM YYYY", () => {
    const card = buildTradingCard(mockData, matchAllConditions);
    const texts = extractTexts(card);
    expect(texts.some((t) => t === "15 Jan 2024")).toBe(true);
  });

  test("shows Wallet ID from data.client_id and Trading Account ID from data.account_id", () => {
    const card = buildTradingCard(mockData, matchAllConditions);
    const texts = extractTexts(card);

    expect(texts.some((t) => t === "Wallet ID")).toBe(true);
    expect(texts.some((t) => t === "45219")).toBe(true);
    expect(texts.some((t) => t === "Trading Account ID")).toBe(true);
    expect(texts.some((t) => t === "78451293")).toBe(true);
  });

  test("different client_id and account_id values display correctly", () => {
    const diffData: HFMPerformanceData = {
      ...mockData,
      client_id: 99999,
      account_id: 11111111,
    };
    const card = buildTradingCard(diffData, matchAllConditions);
    const texts = extractTexts(card);

    expect(texts.some((t) => t === "99999")).toBe(true);
    expect(texts.some((t) => t === "11111111")).toBe(true);
  });
});

describe("buildPaginationCard", () => {
  test("middle page shows both Next and Previous buttons", () => {
    const card = buildPaginationCard(
      { kind: "wallet", id: 98241376 },
      2,
      3,
      12
    ) as any;

    expect(card.type).toBe("bubble");
    expect(card.size).toBe("mega");
    expect(card.header.contents[0].text).toBe("Page Navigation");

    const texts = extractTexts(card);
    expect(texts.some((t) => t === "Page 2 of 3")).toBe(true);
    expect(texts.some((t) => t === "Total 12 Accounts")).toBe(true);

    const bodyBox = card.body.contents.find((c: any) => c.type === "box");
    expect(bodyBox).toBeDefined();
    expect(bodyBox.contents).toHaveLength(2);
    expect(bodyBox.contents[0].action.label).toBe("Next Page ➔");
    expect(bodyBox.contents[0].action.data).toBe("action=page&kind=wallet&id=98241376&page=3");
    expect(bodyBox.contents[1].action.label).toBe("🠔 Previous Page");
    expect(bodyBox.contents[1].action.data).toBe("action=page&kind=wallet&id=98241376&page=1");
  });

  test("postback data preserves the volume opt-in", () => {
    const withVol = buildPaginationCard(
      { kind: "wallet", id: 98241376, showVolume: true },
      1,
      2,
      7
    ) as any;

    const bodyBox = withVol.body.contents.find((c: any) => c.type === "box");
    expect(bodyBox.contents[0].action.data).toBe(
      "action=page&kind=wallet&id=98241376&page=2&vol=1"
    );
  });

  test("postback data omits the volume flag by default", () => {
    const withoutVol = buildPaginationCard(
      { kind: "wallet", id: 98241376 },
      1,
      2,
      7
    ) as any;

    const bodyBox = withoutVol.body.contents.find((c: any) => c.type === "box");
    expect(bodyBox.contents[0].action.data).toBe(
      "action=page&kind=wallet&id=98241376&page=2"
    );
  });

  test("first page only shows Next button", () => {
    const card = buildPaginationCard(
      { kind: "wallet", id: 98241376 },
      1,
      2,
      7
    ) as any;

    const bodyBox = card.body.contents.find((c: any) => c.type === "box");
    expect(bodyBox).toBeDefined();
    expect(bodyBox.contents).toHaveLength(1);
    expect(bodyBox.contents[0].action.label).toBe("Next Page ➔");
  });

  test("last page only shows Previous button", () => {
    const card = buildPaginationCard(
      { kind: "wallet", id: 98241376 },
      2,
      2,
      7
    ) as any;

    const bodyBox = card.body.contents.find((c: any) => c.type === "box");
    expect(bodyBox).toBeDefined();
    expect(bodyBox.contents).toHaveLength(1);
    expect(bodyBox.contents[0].action.label).toBe("🠔 Previous Page");
  });
});


describe("flex-v1 output is frozen", () => {
  const snapshotData: HFMPerformanceData = {
    ...mockData,
    last_trade: "2024-03-02T09:15:00Z",
  };

  test("default (flag unset) matches the locked v1 JSON", () => {
    delete process.env.FLEX_SUMMARY_VERSION;
    const card = buildTradingCard(snapshotData, matchAllConditions, {
      showVolume: true,
    });
    expect(JSON.stringify(card, null, 2)).toMatchSnapshot();
  });

  test("default (flag unset), volume hidden, not-match conditions", () => {
    delete process.env.FLEX_SUMMARY_VERSION;
    const card = buildTradingCard(snapshotData, notMatchConditions);
    expect(JSON.stringify(card, null, 2)).toMatchSnapshot();
  });
});
